added link to website

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -13,7 +13,7 @@
   {\centering
   \small
   Somerville, MA \textbar{} +1 978-880-3507 \textbar{}
-  nicholascline1@gmail.com \textbar{} nickcline.com
+  nicholascline1@gmail.com \textbar{} \href{https://nickcline.com}{nickcline.com}
   \par}
   
   \vspace{-1.1em}  % Remove extra space below contact info
@@ -40,7 +40,7 @@
   \begin{center}
     \begin{minipage}{0.9\textwidth}
       \centering
-      \large\itshape\color{gray}
+      \large\itshape\color{darkgray}
       Experienced mechanical engineer with expertise in robotics control systems and software development, seeking to apply advanced skills in AI, machine learning, and mechanism design to create innovative solutions in robotics control and intelligent systems.
     \end{minipage}
   \end{center}
