changed regular resume

--- a/NickClineResume.tex
+++ b/NickClineResume.tex
@@ -14,10 +14,11 @@
 
 \NameAndContact
 
+\MissionStatement
 \Education
-\WorkExperienceResume
+\WorkExperienceResearch
 \ResearchExperienceResume
-\ProjectExperienceResume
+\ProjectExperienceResearch
 \Publications
 \SkillsInterests
 
