--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -119,9 +119,9 @@
   \entry{University of Massachusetts Amherst HRSL, Amherst, MA}{Dec 2021 -- May 2022}
   \textit{Graduate Researcher}
   \begin{itemize}
-  \item Created control scripts in Python to interface with a robotic exoskeleton and collect data from motion capture and force plates.
-  \item Analyzed the effect of unilateral stiffness on human gait using MATLAB, identifying key trends in joint angles and ground reaction forces.
-  \item Identified key areas for quality-of-life improvements in the lab's data collection pipeline, implementing solutions to streamline the process.
+  \item Created control scripts in python to implement custom impedance control loops for a robotic hip exoskeleton using a Raspberri Pi 4 and the FlexSEA API.
+  \item Applied asymmetric perturbations to human gait to study behavioral adaptations to a resistant exoskeleton stiffness. Compiled and analyzed data from motion capture and ground reaction forces to identify key trends and possible neuromotor impacts. Co-authored the experiments' findings which were published in IROS 2022.
+  \item Identified new control schemes for gait control, documenting and testing the initial implementation. Takeaways from the experiments were used to develop tools for realtime data analysis and an improved setup process.
   \end{itemize}
 }
 
