changed some links

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -91,19 +91,19 @@
 % Project Experience Section - Research Version
 \newcommand{\ProjectExperienceResearch}{
   \sectionheading{Project Experience}
-  \entry{\href{https://nickcline.com}{Robotic Simulation}}{October 2023 -- Present}
+  \entry{\href{https://nickcline.com/portfolio/furuta-simulation}{Robotic Simulation}}{October 2023 -- Present}
   \begin{itemize}
   \item Built a Furuta pendulum model for use in Gazebo and Drake, controlled with C++ scripts and ROS 2. Developed swing-up and energy-minimizing controllers to stabilize pendulum. Future implementations include RL control of the pendulum and double pendulum control.
   \item Created a bipedal robot model in Gazebo and used Julia to output inverse dynamics from the system configuration. Future implementations include full-body control of the bipedal robot.
   \end{itemize}
 
-  \entry{\href{https://nickcline.com}{Robotic System Design}}{January 2023 -- Present}
+  \entry{\href{https://nickcline.com/portfolio/gearbox-design}{Robotic System Design}}{January 2023 -- Present}
   \begin{itemize}
   \item Designed and prototyped cycloidal and planetary gearboxes for use with brushless DC motors. Tested prototypes using speed control and iterated on design to improve assembly and strength.
   \item Produced a benchtop dynamometer prototype to compare performance and characteristics of two competing DC motors. 
   \end{itemize}
 
-  \entry{\href{https://nickcline.com}{Personal Website Tools}}{June 2024 -- Present}
+  \entry{\href{https://nickcline.com/interactive-robotics}{Personal Website Tools}}{June 2024 -- Present}
   \begin{itemize}
   \item Developed modular LaTeX templates to streamline resume generation and standardize formatting across different versions, with live versions hosted on GitHub and viewable on my personal website.
   \item Created JavaScript widgets to display nonlinear dynamical systems, with interactive features to change initial conditions and parameters.
