made some more skills appear in resume

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -102,9 +102,13 @@
   \entry{\href{https://nickcline.com/portfolio/gearbox-design}{Robotic System Design}}
   \begin{itemize}
   \item Designed and prototyped cycloidal and planetary gearboxes for use with brushless DC motors. Tested prototypes using speed control and iterated on design to improve assembly and strength.
-  \item Produced a benchtop dynamometer prototype to compare performance and characteristics of two competing DC motors.
+  \item Produced a benchtop dynamometer prototype to compare performance and characteristics of two competing DC motors. 3D printed the mechanical components of the dynamometer with a focus on rigidity and assembly.
   \end{itemize}
   
+  \entry{Skill Development}
+  \begin{itemize}
+    \item Expert in 3D Printing, Solidworks, Python, MATLAB, and robotic design. Working knowledge of C, C++, Rust, Julia, ROS, Gazebo, Drake and Reinforcement Learning.
+  \end{itemize}
   %maybe add genetic algorithm for snake and teaching class if you have space?
   %or add something about skills and let them know that I have robotics stuff but also have pretty good software stuff
   %and then say "here's what I'm an expert in"
