entry no date fix

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -93,19 +93,19 @@
 % Project Experience Section - Research Version
 \newcommand{\ProjectExperienceResearch}{
   \sectionheading{Project Experience}
-  \entry{\href{https://nickcline.com/portfolio/furuta-simulation}{Robotic Simulation}}
+  \entryNoDate{\href{https://nickcline.com/portfolio/furuta-simulation}{Robotic Simulation}}
   \begin{itemize}
   \item Built a Furuta pendulum model for use in Gazebo and Drake, controlled with C++ scripts and ROS 2. Developed swing-up and energy-minimizing controllers to stabilize pendulum. Future implementations include reinforcement learning based control of the pendulum and double pendulum control.
   \item Created a bipedal robot model in Gazebo and used Julia to output inverse dynamics from the system configuration. Future implementations include full-body control of the bipedal robot.
   \end{itemize}
   
-  \entry{\href{https://nickcline.com/portfolio/gearbox-design}{Robotic System Design}}
+  \entryNoDate{\href{https://nickcline.com/portfolio/gearbox-design}{Robotic System Design}}
   \begin{itemize}
   \item Designed and prototyped cycloidal and planetary gearboxes for use with brushless DC motors. Tested prototypes using speed control and iterated on design to improve assembly and strength.
   \item Produced a benchtop dynamometer prototype to compare performance and characteristics of two competing DC motors. 3D printed the mechanical components of the dynamometer with a focus on rigidity and assembly.
   \end{itemize}
   
-  \entry{Skill Development}
+  \entryNoDate{Skill Development}
   \begin{itemize}
     \item Expert in 3D Printing, Solidworks, Python, MATLAB, and robotic design. Working knowledge of C, C++, Rust, Julia, ROS, Gazebo, Drake and Reinforcement Learning.
   \end{itemize}
