--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -58,7 +58,7 @@
     \begin{minipage}[c][1.25\baselineskip][c]{5.5em}
       \centering\textbf{Interests:}
     \end{minipage} & 
-    Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
+    Robotics, Machine Learning, AI, 3D Printing, Gardening, Cooking, Weightlifting.
   \end{tabular}
 }
 
