robotics to mechatronics

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -41,7 +41,7 @@
     \begin{minipage}{0.9\textwidth}
       \centering
       \large\itshape\color{darkgray}
-      Experienced robotics engineer with expertise in robotics controls and software development, seeking to apply advanced skills in nonlinear dynamics, control theory, and mechanism design to create innovative solutions in robotics control and intelligent systems.
+      Experienced mechatronics engineer with expertise in robotics controls and software development, seeking to apply advanced skills in nonlinear dynamics, control theory, and mechanism design to create innovative solutions in robotics control and intelligent systems.
     \end{minipage}
   \end{center}
   \vspace{-1.5em}  % Reduce space after mission statement
@@ -105,14 +105,13 @@
   \item Produced a benchtop dynamometer prototype to compare performance and characteristics of two competing DC motors. 3D printed the mechanical components of the dynamometer with a focus on rigidity and assembly.
   \end{itemize}
   
-  \entryNoDate{Skill Development}
+  \entryNoDate{Areas of Expertise}
   \begin{itemize}
     \item Expert in 3D Printing, Solidworks, Python, MATLAB, and robotic design. Working knowledge of C, C++, Rust, Julia, ROS, Gazebo, Drake and Reinforcement Learning.
   \end{itemize}
   %maybe add genetic algorithm for snake and teaching class if you have space?
   %or add something about skills and let them know that I have robotics stuff but also have pretty good software stuff
   %and then say "here's what I'm an expert in"
-  
   %\entry{\href{https://nickcline.com/interactive-robotics}{Personal Website Tools}}
   
   %\begin{itemize}
