--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -86,7 +86,7 @@
   \item Developed innovative design features for a sensor assembly, playing a key role in a cross-functional team by exploring trade spaces and implementing solutions.
   \item Led significant project design reviews, with the goal of tracking performance and meeting strict requirements.
   \item Designed and tested production prototypes, analyzing test data to identify areas for revision and validate production processes for critical assembly features.
-  \item Programmed modular data visualization tools for detailed analysis of data, implemented tools for improving and automating processes.
+  \item Programmed modular data visualization tools for detailed analysis of data, implemented tools for improving program automation.
   %if you have space, add a sentence about material selection, production ready machining, analysis
   \end{itemize}
 }
