--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -81,7 +81,7 @@
 \newcommand{\WorkExperienceResearch}{
   \sectionheading{Work Experience}
   \entry{Draper Laboratory, Cambridge, MA}{Aug 2022 -- Present}
-  \textit{Mechanical Instrumentation Engineer II, Sofware Developer}
+  \textit{Mechanical Instrumentation Engineer II, Software Developer}
   \begin{itemize}
   \item Developed innovative design features for a sensor assembly, playing a key role in a cross-functional team by exploring trade spaces and implementing solutions.
   \item Led significant project design reviews, with the goal of tracking performance and meeting strict requirements.
